@startuml

class core.Game{
- InputState inputState
- RendererManager rendererManager
- SystemManager systemManager
+ void update()
+ void render(Graphics2D)
+ void initialize()
}

class entity.Player {
}
class entity.EntityManager {
- List<Entity> entities
+ void addEntity(Entity)
+ void removeEntity(Entity)
+ List<Entity> getEntities()
+ Player getPlayer()
}


abstract class entity.Entity {
# Point wantedMovements
# Point coordinates
+ void move(int,int)
+ Point getCoordinates()
+ Point getWantedMovements()
+ void setWantedMovements(Point)
}



Player <-- entity.EntityManager : possède
entity.EntityManager <-- core.Game : Initialise
entity.Entity <|-- entity.Player
@enduml